--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </tr>
 <tr>
     <td>
-        <button id="saveImage" onClick="saveFile()">SavePicture</button>
+        <button id="saveImage" onclick="initOn()" > SavePicture </button>
 </td>
 </tr>
   </table>
