--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="container-fluid">
       <div class="col-md-6 col-md-offset-3 display">
         <h2>Artist Timeline</h2>
-        <img class="img-container img-display img-rounded img-responsive" src="images/download.png" alt="placeholder">
+        <img class="img-container img-display img-rounded img-responsive" src="images/1.png" alt="placeholder">
         <div class="control-bar">
           <div id="slider"></div>
           <span class="pull-left">0:00</span>
@@ -89,8 +89,8 @@
               <span class="label-live">Live</span>
             </button>
           </span>
-
         </div>
+        <button class="btn btn-danger">START</button>
       </div>
     </div>
     <script src="scripts/jquery.min.js"></script>
@@ -138,7 +138,7 @@
     
     var sliderChangedFn = function(event, ui) {
       console.log(ui.value);
-      $('.img-container').css( "opacity", Math.random() );
+      $('.img-container').attr( "src", 'images/' + ui.value + '.png' );
     };
 
     var changeSliderMaxFn = function(newMax, setValueToMax) {
@@ -161,10 +161,18 @@
         range: "min",
         slide: sliderChangedFn
       }).addSliderSegments($slider.slider("option").max);
-
-
-      changeSliderMaxFn(100);
     }
+    </script>
+    <script>
+
+    var fs = require('fs');
+    var currentDir = process.cwd();
+    fs.writeFile(currentDir + "/test.txt", "Hi mom!", function(err) {
+        if(err) {
+            alert(err);
+        }
+    });
+
     </script>
 </body>
 </html>
