--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       }
 
       .img-display {
-        /*width: 100%;*/
         height: auto;
         width: 100%;
         border-bottom-right-radius: 0px;
@@ -73,13 +72,22 @@
       .fui-video {
         padding-right: 3px;
       }
+
+      #video {
+        height: auto;
+        width: 100%;
+        background-color: #BDC3C7;
+        border-top-right-radius: 6px;
+        border-top-left-radius: 6px;
+      }
      </style>   
 </head>
 <body>
     <div class="container-fluid">
       <div class="col-md-6 col-md-offset-3 display">
         <h2>Artist Timeline</h2>
-        <img class="img-container img-display img-rounded img-responsive" src="images/1.png" alt="placeholder">
+        <img class="img-container img-display img-rounded img-responsive hide" src="images/1.png" alt="placeholder">
+        <video id="video">Video stream not available.</video>
         <div class="control-bar">
           <div id="slider"></div>
           <span class="pull-left">0:00</span>
@@ -95,6 +103,7 @@
     </div>
     <script src="scripts/jquery.min.js"></script>
     <script src="scripts/flat-ui.min.js"></script>
+
     <script>
     var toggleLive = function() {
       var btnLive = $(this);
@@ -111,7 +120,40 @@
 
     $(".btn-live").click(toggleLive);
     </script>
+
+
     <script>
+    var $slider = $("#slider");
+    var sliderConfig = {
+      'min': 1,
+      'max': 5,
+      'value': 5
+    };
+    
+    var sliderChangedFn = function(event, ui) {
+      console.log(ui.value);
+      var max = $(this).slider("option", "max");
+
+      if(ui.value === max) {
+        $('#video').removeClass('hide');
+        $('.img-container').addClass('hide');
+      } else {
+        $('#video').addClass('hide');
+        $('.img-container').removeClass('hide');
+        $('.img-container').attr( "src", 'images/' + ui.value + '.png' );
+      }
+    };
+
+    var changeSliderMaxFn = function(newMax, setValueToMax) {
+      var setValue = setValueToMax;
+
+      $slider.slider( "option", "max", newMax );
+
+      if(setValue != false) {
+        $slider.slider("value", newMax);
+      }
+    }
+
     $.fn.addSliderSegments = function (amount, orientation) {
       return this.each(function () {
         if (orientation == "vertical") {
@@ -129,50 +171,14 @@
       });
     };
 
-    var $slider = $("#slider");
-    var sliderConfig = {
-      'min': 1,
-      'max': 5,
-      'value': 5
-    };
-    
-    var sliderChangedFn = function(event, ui) {
-      console.log(ui.value);
-      $('.img-container').attr( "src", 'images/' + ui.value + '.png' );
-    };
-
-    var changeSliderMaxFn = function(newMax, setValueToMax) {
-      var setValue = setValueToMax;
-
-      $slider.slider( "option", "max", newMax );
-
-      if(setValue != false) {
-        $slider.slider("value", newMax);
-      }
-    }
-
-
-    if ($slider.length > 0) {
-      $slider.slider({
-        min: sliderConfig.min,
-        max: sliderConfig.max,
-        value: sliderConfig.value,
-        orientation: "horizontal",
-        range: "min",
-        slide: sliderChangedFn
-      }).addSliderSegments($slider.slider("option").max);
-    }
-    </script>
-    <script>
-
-    var fs = require('fs');
-    var currentDir = process.cwd();
-    fs.writeFile(currentDir + "/test.txt", "Hi mom!", function(err) {
-        if(err) {
-            alert(err);
-        }
-    });
-
+    $slider.slider({
+      min: sliderConfig.min,
+      max: sliderConfig.max,
+      value: sliderConfig.value,
+      orientation: "horizontal",
+      range: "min",
+      slide: sliderChangedFn
+    }).addSliderSegments($slider.slider("option").max);
     </script>
 </body>
 </html>
