--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/flat-ui.css">
    <!-- <script src="scripts/getmedia.js"></script>-->
+   <script src="scripts/fnLibrary.js"></script>
+   <script src="scripts/fileLIB.js.js"></script>
      <style>
       .container-fluid {
         padding-top: 15px;
@@ -98,9 +100,16 @@
             </button>
           </span>
         </div>
-        <button class="btn btn-danger">START</button>
+        <button class="btn btn-danger" id="startbutton">START</button>
       </div>
     </div>
+    <div class="camera" style="visibility: hidden" >
+        <video id="video">Video stream not available.</video>
+    </div>
+     <canvas id="canvas" style="visibility: hidden"></canvas>
+     <div class="output" style="visibility: hidden">
+        <img id="photo"></img>
+      </div>
     <script src="scripts/jquery.min.js"></script>
     <script src="scripts/flat-ui.min.js"></script>
 
@@ -154,6 +163,17 @@
       }
     }
 
+    if ($slider.length > 0) {
+      $slider.slider({
+        min: sliderConfig.min,
+        max: sliderConfig.max,
+        value: sliderConfig.value,
+        orientation: "horizontal",
+        range: "min",
+        slide: sliderChangedFn
+      }).addSliderSegments($slider.slider("option").max);
+    }
+    </script>
     $.fn.addSliderSegments = function (amount, orientation) {
       return this.each(function () {
         if (orientation == "vertical") {
