--- a/index.html
+++ b/index.html
@@ -7,82 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/flat-ui.css">
+    <link rel="stylesheet" href="css/style.css">
    <!-- <script src="scripts/getmedia.js"></script>-->
    <script src="scripts/fnLibrary.js"></script>
    <script src="scripts/fileLIB.js.js"></script>
-     <style>
-      .container-fluid {
-        padding-top: 15px;
-        padding-bottom: 15px;
-      }
-
-      .img-display {
-        height: auto;
-        width: 100%;
-        border-bottom-right-radius: 0px;
-        border-bottom-left-radius: 0px;
-      }
-
-      .control-bar {
-        height: 70px;
-        width: auto;
-        background-color: #34495E;
-        border-bottom-right-radius: 6px;
-        border-bottom-left-radius: 6px;
-        padding-top: 15px;
-        padding-right: 20px;
-        padding-bottom: 15px;
-        padding-left: 20px;
-        color: white;
-        font-family: "Lato", Helvetica, Arial, sans-serif;
-        font-size: 13px;
-        font-weight: 300;
-        line-height: normal;
-      }
-
-      html,
-      head,
-      body,
-      .container-fluid,
-      .col-md-12 {
-        height: 100%;
-      }
-
-      .display {
-        /*width: 820px;*/
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-      }
-
-      #slider {
-        margin-bottom: 10px;
-      }
-
-      body {
-        background-color: #ECF0F1;
-      }
-
-      .btn-live {
-        padding-left: 3px;
-        padding-right: 3px;
-        padding-bottom: 2px;
-        padding-top: 2px;
-        font-size: 13px;
-      }
-
-      .fui-video {
-        padding-right: 3px;
-      }
-
-      #video {
-        height: auto;
-        width: 100%;
-        background-color: #BDC3C7;
-        border-top-right-radius: 6px;
-        border-top-left-radius: 6px;
-      }
-     </style>   
 </head>
 <body>
     <div class="container-fluid">
@@ -112,95 +40,9 @@
       </div>
     <script src="scripts/jquery.min.js"></script>
     <script src="scripts/flat-ui.min.js"></script>
-
+    <script src="scripts/slider.js"></script>
+    <script src="scripts/toggleLive.js"></script>
     <script>
-    var toggleLive = function() {
-      var btnLive = $(this);
-      var labelLive = $('.label-live');
-
-      if(btnLive.hasClass('btn-danger')) {
-        btnLive.removeClass('btn-danger').addClass('btn-default');
-        labelLive.text('Paused');
-      } else {
-        btnLive.removeClass('btn-default').addClass('btn-danger');
-        labelLive.text('Live');
-      }
-    }
-
-    $(".btn-live").click(toggleLive);
-    </script>
-
-
-    <script>
-    var $slider = $("#slider");
-    var sliderConfig = {
-      'min': 1,
-      'max': 5,
-      'value': 5
-    };
-    
-    var sliderChangedFn = function(event, ui) {
-      console.log(ui.value);
-      var max = $(this).slider("option", "max");
-
-      if(ui.value === max) {
-        $('#video').removeClass('hide');
-        $('.img-container').addClass('hide');
-      } else {
-        $('#video').addClass('hide');
-        $('.img-container').removeClass('hide');
-        $('.img-container').attr( "src", 'images/display/' + ui.value + '.png' );
-      }
-    };
-
-    var changeSliderMaxFn = function(newMax, setValueToMax) {
-      var setValue = setValueToMax;
-
-      $slider.slider( "option", "max", newMax );
-
-      if(setValue != false) {
-        $slider.slider("value", newMax);
-      }
-    }
-
-    if ($slider.length > 0) {
-      $slider.slider({
-        min: sliderConfig.min,
-        max: sliderConfig.max,
-        value: sliderConfig.value,
-        orientation: "horizontal",
-        range: "min",
-        slide: sliderChangedFn
-      }).addSliderSegments($slider.slider("option").max);
-    }
-    </script>
-    $.fn.addSliderSegments = function (amount, orientation) {
-      return this.each(function () {
-        if (orientation == "vertical") {
-          var output = ''
-            , i;
-          for (i = 1; i <= amount - 2; i++) {
-            output += '<div class="ui-slider-segment" style="top:' + 100 / (amount - 1) * i + '%;"></div>';
-          };
-          $(this).prepend(output);
-        } else {
-          var segmentGap = 100 / (amount - 1) + "%"
-            , segment = '<div class="ui-slider-segment" style="margin-left: ' + segmentGap + ';"></div>';
-          $(this).prepend(segment.repeat(amount - 2));
-        }
-      });
-    };
-
-    $slider.slider({
-      min: sliderConfig.min,
-      max: sliderConfig.max,
-      value: sliderConfig.value,
-      orientation: "horizontal",
-      range: "min",
-      slide: sliderChangedFn
-    }).addSliderSegments($slider.slider("option").max);
-
-
     var flipImage = function(imageID) {
       var exec = require('child_process').exec;
 
