--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
       <div class="col-md-6 col-md-offset-3 display">
         <h2>Artist Timeline</h2>
-        <img class="img-container img-display img-rounded img-responsive hide" src="images/display/1.png" alt="placeholder">
+        <img class="img-container img-display img-rounded img-responsive hide" src="images/raw/1.png" alt="placeholder">
         <video id="video">Video stream not available.</video>
         <div class="control-bar">
           <div id="slider"></div>
