--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
           <div id="slider"></div>
           <span class="pull-left">0:00</span>
           <span class="pull-right">
-            <button class="btn btn-default btn-live first-time">
+            <button class="btn btn-default btn-live first-time btn-controls ">
               <span class="fui-video"></span>
               <span class="label-live">Paused</span>
+            </button>
+            <button class="btn btn-default btn-controls">
+              <span class="fui-star"></span>
+              <span>Experimental Mode</span>
             </button>
           </span>
         </div>
