Add experiment UI controls

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
               <span class="fui-video"></span>
               <span class="label-live">Paused</span>
             </button>
-            <button class="btn btn-default btn-controls">
+            <button class="btn btn-default btn-experiment btn-controls">
               <span class="fui-star"></span>
-              <span>Experimental Mode</span>
+              <span class="label-experiment">Enable Experiment</span>
             </button>
           </span>
         </div>
